--- a/index.html
+++ b/index.html
@@ -175,15 +175,15 @@
             <h3 data-aos="zoom-in-down">My Portfolio</h3>
             <h2 data-aos="zoom-in-down">Recent Works</h2>
             <div class="projectBox">
-                <ul>
+                <ul data-aos="fade-up">
                     <li class="list projectActive" data-filter="all">All Projects</li>
                     <li class="list" data-filter="miniGames">Mini Games</li>
                     <li class="list" data-filter="simpleWebapps">Mini Webapps</li>
                     <li class="list" data-filter="youtubeClips">Youtube Clips</li>
                     <li class="list" data-filter="others">Others</li>
                 </ul>
-                <div class="product">
-                    <div data-aos="zoom-in-up" class="project-card others" id="room-homepage-card">
+                <div data-aos="zoom-in-up" class="product">
+                    <div class="project-card others" id="room-homepage-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/ROOM%20-%20HOMEPAGE" target="blanc"><span class="fas fa-code"></span></a>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card miniGames" id="flappy-bird-card">
+                    <div class="project-card miniGames" id="flappy-bird-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/FLAPPY%20BIRD/menu.html" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/FLAPPY%20BIRD" target="blanc"><span class="fas fa-code"></span></a>
@@ -211,7 +211,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card miniGames" id="hangman-card">
+                    <div class="project-card miniGames" id="hangman-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/HANGMAN/index.html" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/HANGMAN" target="blanc"><span class="fas fa-code"></span></a>
@@ -226,7 +226,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card simpleWebapps" id="calculator-card">
+                    <div class="project-card simpleWebapps" id="calculator-card">
                         <div class="project-card__content">
                             <a href="./PROJECTS/CALCULATOR APP/index.html" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/CALCULATOR%20APP" target="blanc"><span class="fas fa-code"></span></a>
@@ -240,7 +240,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card simpleWebapps" id="memeGen-card">
+                    <div class="project-card simpleWebapps" id="memeGen-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="./PROJECTS/MemeGeneratorSource/" target="blanc"><span class="fas fa-code"></span></a>
@@ -253,7 +253,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card simpleWebapps" id="paint-card">
+                    <div class="project-card simpleWebapps" id="paint-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/SIMPLE-PAINT/" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="./PROJECTS/SIMPLE PAINT/" target="blanc"><span class="fas fa-code"></span></a>
@@ -266,7 +266,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card youtubeClips" id="snake-card">
+                    <div class="project-card youtubeClips" id="snake-card">
                         <div class="project-card__content">
                             <a href="https://www.youtube.com/watch?v=OfrRXK3a6pw&t=9s" target="blanc"><span class="fas fa-play"></span></a>
                         </div>
@@ -278,7 +278,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card youtubeClips" id="coding-card">
+                    <div class="project-card youtubeClips" id="coding-card">
                         <div class="project-card__content">
                             <a href="https://www.youtube.com/watch?v=PdHPwGvnvzI&t=1373s" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/FLAPPY%20BIRD" target="blanc"><span class="fas fa-code"></span></a>
@@ -291,7 +291,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card youtubeClips" id="piano-card">
+                    <div class="project-card youtubeClips" id="piano-card">
                         <div class="project-card__content">
                             <a href="https://www.youtube.com/watch?v=AR6zpfzaENs&feature=youtu.be" target="blanc"><span class="fas fa-play"></span></a>
                         </div>
@@ -303,7 +303,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card others" id="tron-like-card">
+                    <div class="project-card others" id="tron-like-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/TRON-LIKE%20TUNNELS/index.html" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/TRON-LIKE%20TUNNELS" target="blanc"><span class="fas fa-code"></span></a>
@@ -316,7 +316,7 @@
                         </div>
                     </div>
 
-                    <div data-aos="zoom-in-up" class="project-card others" id="galactic-card">
+                    <div class="project-card others" id="galactic-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/GALACTIC%20LIGHT%20TRAILS/index.html" target="blanc"><span class="fas fa-play"></span></a>
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/GALACTIC%20LIGHT%20TRAILS" target="blanc"><span class="fas fa-code"></span></a>
