--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/ROOM%20-%20HOMEPAGE" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Room Homepage</a>
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/">Room Homepage</a>
                             <div>
                                 <span>HTML</span>
                                 <span>CSS</span>
@@ -204,7 +204,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/FLAPPY%20BIRD" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Flappy Bird</a>
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/FLAPPY%20BIRD/menu.html">Flappy Bird</a>
                             <div>
                                 <span>JS</span>
                             </div>
@@ -217,7 +217,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/HANGMAN" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Hangman</a>
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/HANGMAN/index.html">Hangman</a>
                             <div>
                                 <span>HTML</span>
                                 <span>CSS</span>
@@ -232,7 +232,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/CALCULATOR%20APP" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Calculator</a>
+                            <a href="./PROJECTS/CALCULATOR APP/index.html">Calculator</a>
                             <div>
                                 <span>CSS</span>
                                 <span>JS</span>
@@ -246,7 +246,7 @@
                             <a href="./PROJECTS/MemeGeneratorSource/" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Meme Generator</a>
+                            <a href="https://tranphuongdinh.github.io/MemeGeneratorAppDemo/">Meme Generator</a>
                             <div>
                                 <span>REACT</span>
                             </div>
@@ -259,7 +259,7 @@
                             <a href="./PROJECTS/SIMPLE PAINT/" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Paint</a>
+                            <a href="https://tranphuongdinh.github.io/SIMPLE-PAINT/">Paint</a>
                             <div>
                                 <span>JS</span>
                             </div>
@@ -271,7 +271,7 @@
                             <a href="https://www.youtube.com/watch?v=OfrRXK3a6pw&t=9s" target="blanc"><span class="fas fa-play"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Snake The Game</a>
+                            <a href="https://www.youtube.com/watch?v=OfrRXK3a6pw&t=9s">Snake The Game</a>
                             <div>
                                 <span>C++</span>
                             </div>
@@ -284,7 +284,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/FLAPPY%20BIRD" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Coding Challenge</a>
+                            <a href="https://www.youtube.com/watch?v=PdHPwGvnvzI&t=1373s">Coding Challenge</a>
                             <div>
                                 <span>JS</span>
                             </div>
@@ -296,7 +296,7 @@
                             <a href="https://www.youtube.com/watch?v=AR6zpfzaENs&feature=youtu.be" target="blanc"><span class="fas fa-play"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Piano Cover</a>
+                            <a href="https://www.youtube.com/watch?v=AR6zpfzaENs&feature=youtu.be">Piano Cover</a>
                             <div>
                                 <span>PIANO</span>
                             </div>
@@ -309,7 +309,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/TRON-LIKE%20TUNNELS" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Tron-like Tunnels</a>
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/TRON-LIKE%20TUNNELS/index.html">Tron-like Tunnels</a>
                             <div>
                                 <span>JS Canvas</span>
                             </div>
@@ -322,7 +322,7 @@
                             <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/GALACTIC%20LIGHT%20TRAILS" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="">Galactic Light Trails</a>
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/GALACTIC%20LIGHT%20TRAILS/index.html">Galactic Light Trails</a>
                             <div>
                                 <span>JS Canvas</span>
                             </div>
