--- a/index.html
+++ b/index.html
@@ -376,6 +376,15 @@
         <div class="contact-items">
             <ul>
                 <li>
+                    <a href="#dark-mode-btn" id="dark-mode-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span id="dark-mode-btn-content" class="fas fa-sun"></span>
+                    </a>
+                </li>
+                <li>
                     <a href="https://drive.google.com/file/d/1VwC-kbQqPuUxxIwX3ZIMPvIrlTSTlpAi/view?usp=sharing" target="blanc">
                         <span></span>
                         <span></span>
@@ -446,6 +455,7 @@
         </div>
     </footer>
     <a id="back-to-top-btn" href="#home"><img src="./images/up-icon.png" alt="Back to top"></a>
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/jquery.roadmap.js"></script>
