update certificates page

--- a/index.html
+++ b/index.html
@@ -154,20 +154,22 @@
                 <div class="certificate">
                     <h3>My Certificates</h3>
                     <h2>A Winner Never Stops Trying</h2>
-                    <div class="certificate-box">
-                        <span style="--i:1"><img src="./images/algorithm-toolbox-certificate.PNG" alt="algorithm-toolbox-certificate"></span>
-                        <span style="--i:2"><img src="./images/front-end-basic-certificate.PNG" alt="front-end-basic-certificate"></span>
-                        <span style="--i:3"><img src="./images/bootstrap4-certificate.PNG" alt="bootstrap4-certificate"></span>
-                        <span style="--i:4"><img src="./images/CodeLearn_certification.png" alt="CodeLearn_certification"></span>
-                        <span style="--i:5"><img src="./images/CodeLearn_certification-1.png" alt="CodeLearn_certification1"></span>
-                        <span style="--i:6"><img src="./images/CodeLearn_certification-2.png" alt="CodeLearn_certification2"></span>
-                        <span style="--i:7"><img src="./images/CodeLearn_certification-3.png" alt="CodeLearn_certification3"></span>
-                        <span style="--i:8"><img src="./images/CodeLearn_certification-4.png" alt="CodeLearn_certification4"></span>
-                        <span style="--i:9"><img src="./images/CodeLearn_certification-5.png" alt="CodeLearn_certification5"></span>
-                        <span style="--i:10"><img src="./images/CodeLearn_certification-6.png" alt="CodeLearn_certification6"></span>
-                        <span style="--i:11"><img src="./images/CodeLearn_certification-7.png" alt="CodeLearn_certification7"></span>
-                        <span style="--i:12"><img src="./images/CodeLearn_certification-8.png" alt="CodeLearn_certification8"></span>
-                    </div>
+                    <a href="certificates.html" target="blanc">
+                        <div class="certificate-box">
+                            <span style="--i:1"><img src="./images/CodeLearn_certification.png" alt="CodeLearn_certification"></span>
+                            <span style="--i:2"><img src="./images/CodeLearn_certification-1.png" alt="CodeLearn_certification1"></span>
+                            <span style="--i:3"><img src="./images/CodeLearn_certification-2.png" alt="CodeLearn_certification2"></span>
+                            <span style="--i:4"><img src="./images/algorithm-toolbox-certificate.PNG" alt="algorithm-toolbox-certificate"></span>
+                            <span style="--i:5"><img src="./images/front-end-basic-certificate.PNG" alt="front-end-basic-certificate"></span>
+                            <span style="--i:6"><img src="./images/bootstrap4-certificate.PNG" alt="bootstrap4-certificate"></span>
+                            <span style="--i:7"><img src="./images/CodeLearn_certification-3.png" alt="CodeLearn_certification3"></span>
+                            <span style="--i:8"><img src="./images/CodeLearn_certification-4.png" alt="CodeLearn_certification4"></span>
+                            <span style="--i:9"><img src="./images/CodeLearn_certification-5.png" alt="CodeLearn_certification5"></span>
+                            <span style="--i:10"><img src="./images/CodeLearn_certification-6.png" alt="CodeLearn_certification6"></span>
+                            <span style="--i:11"><img src="./images/CodeLearn_certification-7.png" alt="CodeLearn_certification7"></span>
+                            <span style="--i:12"><img src="./images/CodeLearn_certification-8.png" alt="CodeLearn_certification8"></span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
