--- a/certificates.html
+++ b/certificates.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport"
-              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Dinh Tran</title>
-        <link rel="shortcut icon" href="./images/white-logo.png">
-        <!--Ion Icons-->
-        <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-        <!--Google Fonts-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Krona+One&family=Press+Start+2P&family=Rowdies:wght@700&display=swap" rel="stylesheet">
-        <!--Stylesheets-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/fontawesome-all.css">
-        <link rel="stylesheet" href="css/certificates-style.css">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dinh Tran</title>
+    <link rel="shortcut icon" href="./images/white-logo.png">
+    <!--Ion Icons-->
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <!--Google Fonts-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Aldrich&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Krona+One&family=Press+Start+2P&family=Rowdies:wght@700&display=swap" rel="stylesheet">
+    <!--Stylesheets-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontawesome-all.css">
+    <link rel="stylesheet" href="css/certificates-style.css">
+</head>
+
 <body>
     <div id="loading">
-        <img id="loading-image" src="https://steamuserimages-a.akamaihd.net/ugc/785232317734044116/7B04BA5F49BDB1D05843083868D351F299749F9B/" alt="Loading..." />
-      </div>
-      <div id="progressbar"></div>
-      <div id="scrollPath"></div>
+        <img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." />
+    </div>
+    <div id="progressbar"></div>
+    <div id="scrollPath"></div>
     <main>
         <div class="img-full-screen">
             <span class="img-full-screen__close-btn fas fa-close"></span>
             <a class="img-full-screen__link" href="" target="blanc"><img id="img-full-screen__img" src="" alt="certificate-full-screen"></a>
         </div>
-        <h1 data-aos="zoom-in">Certificates</h1>
+        <h3 data-aos="zoom-in-down">My Certificates</h3>
+        <h2 data-aos="zoom-in-down">Hall Of Fame</h2>
         <section id="certificates" data-aos="zoom-in-up">
             <img class="certificates__img" src="images/CodeLearn_certification.png" data-link="https://codelearn.io/certification/odbkndqw" alt="CodeLearn_certification">
             <img class="certificates__img" src="images/CodeLearn_certification-1.png" data-link="https://codelearn.io/certification/zwi1mgy2" alt="CodeLearn_certification">
@@ -49,6 +51,46 @@
             <img class="certificates__img" src="images/front-end-basic-certificate.PNG" data-link="https://coursera.org/share/bbd73c08c469ac8b1a49a7a39ab6b52e" alt="HTML-CSS-JS_certification">
             <img class="certificates__img" src="images/bootstrap4-certificate.PNG" data-link="https://coursera.org/share/ec5838105e246a51ca18c978f285c7f0" alt="Bootstrap4_certification">
         </section>
+        <div class="contact-items">
+            <ul>
+                <li>
+                    <a href="#dark-mode-btn" id="dark-mode-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span id="dark-mode-btn-content" class="fas fa-moon"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://drive.google.com/file/d/1VwC-kbQqPuUxxIwX3ZIMPvIrlTSTlpAi/view?usp=sharing" target="blanc">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS" target="blanc">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="fab fa-github-square" aria-hidden="true"></span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/Dinh.Ramos.SR4.CR7.NTH/" target="blanc">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span class="fab fa-facebook-square" aria-hidden="true"></span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </main>
     <footer>
         <div class="ctn">
@@ -86,5 +128,5 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/certificateScript.js"></script>
 </body>
-</html>
 
+</html>
