update cover/avatar image

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section id="about-me">
             <div class="ctn">
                 <div data-aos="fade-up" class="about-me__ctn__full-image">
-                    <img src="./images/avatar-about-me.jpg" alt="">
+                    <img src="./images/avt.jpg" alt="Dinh's Avatar">
                 </div>
                 <div data-aos="fade-down" class="about-me__ctn__content">
                     <div class="about-me__ctn__intro">
