--- a/certificates.html
+++ b/certificates.html
@@ -38,18 +38,18 @@
         <h3 data-aos="zoom-in-down">My Certificates</h3>
         <h2 data-aos="zoom-in-down">Hall Of Fame</h2>
         <section id="certificates" data-aos="zoom-in-up">
-            <img class="certificates__img" src="images/CodeLearn_certification.png" data-link="https://codelearn.io/certification/odbkndqw" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-1.png" data-link="https://codelearn.io/certification/zwi1mgy2" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-2.png" data-link="https://codelearn.io/certification/zddjotrk" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-3.png" data-link="https://codelearn.io/certification/mjkym2iw" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-4.png" data-link="https://codelearn.io/certification/otmynzdi" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-5.png" data-link="https://codelearn.io/certification/zdcyotc2" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-6.png" data-link="https://codelearn.io/certification/yme0yzqz" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-7.png" data-link="https://codelearn.io/certification/mtiwmgjk" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/CodeLearn_certification-8.png" data-link="https://codelearn.io/certification/otm0yzvi" alt="CodeLearn_certification">
-            <img class="certificates__img" src="images/algorithm-toolbox-certificate.PNG" data-link="https://coursera.org/share/3b3dcaaf283a7889b0eed348c5bac80d" alt="HTML-CSS-JS_certification">
-            <img class="certificates__img" src="images/front-end-basic-certificate.PNG" data-link="https://coursera.org/share/bbd73c08c469ac8b1a49a7a39ab6b52e" alt="HTML-CSS-JS_certification">
-            <img class="certificates__img" src="images/bootstrap4-certificate.PNG" data-link="https://coursera.org/share/ec5838105e246a51ca18c978f285c7f0" alt="Bootstrap4_certification">
+            <img class="certificates__img" src="images/codelearn0.webp" data-link="https://codelearn.io/certification/odbkndqw" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn1.webp" data-link="https://codelearn.io/certification/zwi1mgy2" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn2.webp" data-link="https://codelearn.io/certification/zddjotrk" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn3.webp" data-link="https://codelearn.io/certification/mjkym2iw" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn4.webp" data-link="https://codelearn.io/certification/otmynzdi" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn5.webp" data-link="https://codelearn.io/certification/zdcyotc2" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn6.webp" data-link="https://codelearn.io/certification/yme0yzqz" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn7.webp" data-link="https://codelearn.io/certification/mtiwmgjk" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/codelearn8.webp" data-link="https://codelearn.io/certification/otm0yzvi" alt="CodeLearn_certification">
+            <img class="certificates__img" src="images/algorithmToolbox.webp" data-link="https://coursera.org/share/3b3dcaaf283a7889b0eed348c5bac80d" alt="HTML-CSS-JS_certification">
+            <img class="certificates__img" src="images/frontendBasic.webp" data-link="https://coursera.org/share/bbd73c08c469ac8b1a49a7a39ab6b52e" alt="HTML-CSS-JS_certification">
+            <img class="certificates__img" src="images/bootstrap.webp" data-link="https://coursera.org/share/ec5838105e246a51ca18c978f285c7f0" alt="Bootstrap4_certification">
         </section>
         <div class="contact-items">
             <ul>
