--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                             <span style="--i:10"><img src="./images/codelearn6.webp" alt="CodeLearn_certification6"></span>
                             <span style="--i:11"><img src="./images/codelearn7.webp" alt="CodeLearn_certification7"></span>
                             <span style="--i:12"><img src="./images/codelearn8.webp" alt="CodeLearn_certification8"></span>
+                            <span style="--i:13"><img src="./images/codelearn9.webp" alt="CodeLearn_certification9"></span>
                         </div>
                     </a>
                 </div>
