--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             </div>
         </div>
     </footer>
-    <a id="back-to-top-btn" href="#home"><img src="./images/up-icon.png" alt="Back to top"></a>
+    <div id="back-to-top-btn"><img src="./images/up-icon.png" alt="Back to top"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
