--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/roadmap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="css/fontawesome-all.css">
 </head>
 
 <body>
-    <div id="loading">
-        <img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." />
-    </div>
+    <div id="loading"><img id="loading-image" src="https://i.pinimg.com/originals/8b/32/15/8b3215c7ee7dbd5e33b36383a83a04b7.gif" alt="Loading..." /></div>
     <div id="progressbar"></div>
     <div id="scrollPath"></div>
     <header>
@@ -335,7 +333,6 @@
                 <button class="product__btn-see-more">View all</button>
             </div>
         </section>
-
         <section id="contact">
             <h3 data-aos="fade-down">Contact me</h3>
             <h2 data-aos="fade-down">Get in Touch</h2>
