update loading effect

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     <main>
         <section id="home">
             <div class="ctn">
-                <h3 data-aos="fade-up" data-text="Hi, I am">Hi, I am</h3>
+                <h3>Hi, I am</h3>
                 <h2 data-text="TRAN.PHUONG.DINH">TRAN.PHUONG.DINH</h2>
-                <h3 data-aos="fade-in" data-aos-delay="3000">Front End Developer</h3>
-                <div class="btn-group" data-aos="fade-in" data-aos-delay="3000">
+                <h3>Front End Developer</h3>
+                <div class="btn-group">
                     <a href="https://drive.google.com/file/d/12tHLTZ_PqPGUiRm2OqHuT3SYUyk_Xpqw/view?usp=sharing" target="blanc">
                         <span></span>
                         <span></span>
