add music player

--- a/index.html
+++ b/index.html
@@ -89,6 +89,15 @@
                         <span></span>
                         <span></span> Contact me</a>
                 </div>
+                <div class="music-player">
+                    <canvas id="canvas"></canvas>
+                    <h3 class="music-name">Weight of the world</h3>
+                    <div class="btn-group">
+                        <button class="btn-previous"><span class="fa fa-fast-backward"></span></button>
+                        <button class="btn-play"><span class="fa fa-pause"></span></button>
+                        <button class="btn-next"><span class="fa fa-fast-forward"></span></button>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="about-me">
@@ -499,6 +508,7 @@
         });
     </script>
     <script src="js/script.js"></script>
+    <script src="js/music-player.js"></script>
 </body>
 
 </html>
