update certificate page

--- a/certificates.html
+++ b/certificates.html
@@ -21,6 +21,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/fontawesome-all.css">
+    <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="css/certificates-style.css">
 </head>
 
