--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                         <h3>My Intro</h3>
                         <h2>About Me</h2>
                         <p>
-                            Hi! My name is Dinh. I am 19 years old and I am a student of VNU - University Of Science. Web development is my passion. I have learnt Front-end development for six months and I got some certificates of HTML-CSS-JS and Front End frameworks. My favorite
-                            quote is from Mark Twain: “It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so”.
+                            Hi! My name is Tran Phuong Dinh, and I am a second year student at Ho Chi Minh University Of Science. I have a strong passion about Front-end web development, and I've learnt Front-end for eight months and I got some certificates of HTML-CSS-JS and Front-end
+                            frameworks. One of my favorite quotes is from Linus Torvalds: “Talk is cheap. Show me the code.”.
                         </p>
                     </div>
                     <div class="about-me__ctn__info">
@@ -376,7 +376,7 @@
                     </div>
                     <div class="contact-info__item">
                         <span class="contact-info__item-icon fas fa-phone"></span>
-                        <h3><b>Call me</b></h3>
+                        <h3><b>Handy</b></h3>
                         <span>+84949996310</span>
                     </div>
                 </div>
@@ -507,6 +507,7 @@
             });
         });
     </script>
+    <script src="js/rellax.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/music-player.js"></script>
 </body>
