--- a/PROJECTS/FLAPPY BIRD/index.html
+++ b/PROJECTS/FLAPPY BIRD/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <title>FLAPPY BIRD BY ĐÌNH RAMOS</title>
 </head>
+
 <body>
-    <canvas id="canvas" width="288" height="512"></canvas>
-    <button id="btnRestart" onmousedown="init()">RESTART</button>
-    <a href="menu.html"><button id="btnBackToMenu">BACK TO MENU</button></a>
+    <div class="container">
+        <canvas id="canvas" width="288" height="512"></canvas>
+        <button id="btnRestart" onmousedown="init()">RESTART</button>
+        <a href="menu.html"><button id="btnBackToMenu">BACK TO MENU</button></a>
+    </div>
     <script src="game.js"></script>
 </body>
+
 </html>
