--- a/PROJECTS/CALCULATOR APP/index.html
+++ b/PROJECTS/CALCULATOR APP/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULATOR APP</title>
+    <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Calculator_icon.svg/1200px-Calculator_icon.svg.png">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="container">
         <div class="screen">
@@ -24,7 +27,7 @@
                 <button class="number-btn" id="btn-1" onmousedown="get1()">1</button>
                 <button class="number-btn" id="btn-2" onmousedown="get2()">2</button>
                 <button class="number-btn" id="btn-3" onmousedown="get3()">3</button>
-                <button class="number-btn" id="btn-dot"onmousedown="getDot()">.</button>
+                <button class="number-btn" id="btn-dot" onmousedown="getDot()">.</button>
                 <button class="number-btn" id="btn-0" onmousedown="get0()">0</button>
                 <button class="number-btn" id="mod" onmousedown="mod()">%</button>
             </div>
@@ -42,4 +45,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
