--- a/index.html
+++ b/index.html
@@ -193,6 +193,21 @@
                     <li class="list" data-filter="others">Others</li>
                 </ul>
                 <div data-aos="zoom-in-up" class="product">
+                    <div class="project-card others" id="loop-studios-card">
+                        <div class="project-card__content">
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/" target="blanc"><span class="fas fa-play"></span></a>
+                            <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/ROOM%20-%20HOMEPAGE" target="blanc"><span class="fas fa-code"></span></a>
+                        </div>
+                        <div class="project-card__info">
+                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/">Room Homepage</a>
+                            <div>
+                                <span>HTML</span>
+                                <span>CSS</span>
+                                <span>JS</span>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="project-card others" id="room-homepage-card">
                         <div class="project-card__content">
                             <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/" target="blanc"><span class="fas fa-play"></span></a>
@@ -459,54 +474,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/jquery.roadmap.js"></script>
-    <script>
-        $(document).ready(function() {
-            var events = [{
-                date: 'Sep 2019 - Present',
-                content: 'VNU - University of Science <small>Faculty of Information Technology</small>'
-            }, {
-                date: '2016 - 2019',
-                content: 'My Lac Senior High School <small>Student</small>'
-            }, {
-                date: '2012 - 2016',
-                content: 'My Lac Junior High School <small>Student</small>'
-            }, {
-                date: '2007 - 2012',
-                content: 'My Lac Primary School <small>Student</small>'
-            }];
-
-            $('#my-timeline').roadmap(events, {
-                eventsPerSlide: 4,
-                slide: 1,
-                prevArrow: '<i class="fa fa-arrow-circle-left"></i>',
-                nextArrow: '<i class="fa fa-arrow-circle-right"></i>'
-            });
-        });
-    </script>
-    <script>
-        $(document).ready(function() {
-            var events = [{
-                date: 'Front-end basic',
-                content: 'HTML - CSS - JS'
-            }, {
-                date: 'Front-end Libraries & Frameworks',
-                content: 'React / Jquery / Bootstrap 4'
-            }, {
-                date: 'Designs',
-                content: 'Adobe Premere / Adobe Photoshop'
-            }, {
-                date: 'Others',
-                content: 'NodeJS / AJAX / Git / SASS'
-            }];
-
-            $('#my-knowledge').roadmap(events, {
-                eventsPerSlide: 4,
-                slide: 1,
-                prevArrow: '<i class="fa fa-arrow-circle-left"></i>',
-                nextArrow: '<i class="fa fa-arrow-circle-right"></i>'
-            });
-        });
-    </script>
+    <script src="js/study-roadmap.js"></script>
+    <script src="js/frondEnd-roadmap.js"></script>
     <script src="js/rellax.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/music-player.js"></script>
