--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
                 <div data-aos="zoom-in-up" class="product">
                     <div class="project-card others" id="loop-studios-card">
                         <div class="project-card__content">
-                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/" target="blanc"><span class="fas fa-play"></span></a>
-                            <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/ROOM%20-%20HOMEPAGE" target="blanc"><span class="fas fa-code"></span></a>
+                            <a href="./PROJECTS/LOOPSTUDIOS-PAGE/index.html" target="blanc"><span class="fas fa-play"></span></a>
+                            <a href="https://github.com/TranPhuongDinh/dinhtran/tree/master/PROJECTS/LOOPSTUDIOS-PAGE" target="blanc"><span class="fas fa-code"></span></a>
                         </div>
                         <div class="project-card__info">
-                            <a href="https://tranphuongdinh.github.io/dinhtran/PROJECTS/ROOM%20-%20HOMEPAGE/">Room Homepage</a>
+                            <a href="./PROJECTS/LOOPSTUDIOS-PAGE/index.html">Loop Studios Page</a>
                             <div>
                                 <span>HTML</span>
                                 <span>CSS</span>
