--- a/PROJECTS/LOOPSTUDIOS-PAGE/index.html
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/index.html
@@ -16,12 +16,12 @@
 
     <header>
         <div class="logo">
-            <img class="logo-img" src="images/logo.png" alt="Logo">
+            <a href="./index.html"><img class="logo-img" src="images/logo.png" alt="Logo"></a>
         </div>
         <span class="menu-icon"><img src="./images/icon-hamburger.png" alt="Menu-icon"></span>
         <nav class="nav-bar">
             <div class="nav-logo">
-                <img class="nav-logo-img" src="images/logo.png" alt="Nav-Logo">
+                <a href="./index.html"><img class="nav-logo-img" src="images/logo.png" alt="Nav-Logo"></a>
             </div>
             <span class="close-icon"><img src="./images/icon-close.png" alt="Close-icon"></span>
             <ul class="nav-list">
@@ -100,7 +100,7 @@
     <footer>
         <div class="container">
             <div class="footer-logo">
-                <img class="footer-logo-img" src="images/logo.png " alt="Logo ">
+                <a href="./index.html"><img class="footer-logo-img" src="images/logo.png " alt="Logo "></a>
             </div>
             <nav class="nav-bar">
                 <ul class="nav-list">
