--- a/PROJECTS/LOOPSTUDIOS-PAGE/index.html
+++ b/PROJECTS/LOOPSTUDIOS-PAGE/index.html
@@ -112,16 +112,16 @@
                 </ul>
             </nav>
             <ul class="nav-icon">
-                <li>
+                <li class="nav-icon-item">
                     <a href="# "><img src="images/icon-facebook.png " alt="Facebook "></a>
                 </li>
-                <li>
+                <li class="nav-icon-item">
                     <a href="# "><img src="images/icon-twitter.png " alt="Twitter "></a>
                 </li>
-                <li>
+                <li class="nav-icon-item">
                     <a href="# "><img src="images/icon-pinterest.png " alt="Pinterest "></a>
                 </li>
-                <li>
+                <li class="nav-icon-item">
                     <a href="# "><img src="images/icon-instagram.png " alt="Instagram "></a>
                 </li>
             </ul>
